# functional-pokering

./: .gitignore  .travis.yml  LICENSE  README.md  functional-pokering.cabal  stack.yaml
src/: Cards.hs  Main.hs  ParallelMain.hs  Poker.hs  Poker_Test.hs  UnBoard.hs  Wiggly.hs
src/Cards/: Output.hs
