name:                functional-pokering
version:             0.1.0.0
synopsis:            Collection of tools to investigate poker hands, odds and equity
description:         Collection of tools to investigate poker hands, odds and equity
license:             MIT
license-file:        LICENSE
author:              Nigel Rantor
maintainer:          wiggly@wiggly.org
copyright:           (c) 2015 Nigel Rantor
category:            Game
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/wiggly/functional-pokering

executable fp
  main-is:             Main.hs
  ghc-options:
    -O2
    -threaded
    -fprof-auto
    -rtsopts=all
  build-depends:       base >=4.7 && <4.8, random, random-shuffle, bytestring, rainbow, HUnit, safe, deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010

executable fp-profile
  main-is:             Main.hs
  ghc-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  build-depends:       base >=4.7 && <4.8, random, random-shuffle, bytestring, rainbow, HUnit, safe, deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010
